...
                android:layout_gravity="bottom"
                android:background="@color/teal"
                android:visibility="invisible" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/tab_menu"
            style="@style/TopTab"
            android:contentDescription="@string/cd_menu">

            <ImageView
                android:id="@+id/tab_menu_icon"
                style="@style/Icon"
...
